--- a/episodes/2019/1.md
+++ b/episodes/2019/1.md
@@ -59,5 +59,5 @@ TODO: Find a colleage to converse with.
 
 [LambdaConf 2019](https://lambdaconf.zohobackstage.com/LambdaConf2019)
 TODO: Find link for PSConf.
+[ZuriHac 2019](https://mail.haskell.org/pipermail/haskell/2018-December/025594.html)
 [PureScript Conf 2019]()
-
