Format conference calls as a list

--- a/episodes/2019/1.md
+++ b/episodes/2019/1.md
@@ -57,7 +57,6 @@ TODO: Find a colleage to converse with.
 
 ## Conference Calls
 
-[LambdaConf 2019](https://lambdaconf.zohobackstage.com/LambdaConf2019)
-TODO: Find link for PSConf.
-[ZuriHac 2019](https://mail.haskell.org/pipermail/haskell/2018-December/025594.html)
-[PureScript Conf 2019]()
+- [LambdaConf 2019](https://lambdaconf.zohobackstage.com/LambdaConf2019)
+- [ZuriHac 2019](https://mail.haskell.org/pipermail/haskell/2018-December/025594.html)
+- [PureScript Conf 2019]() TODO: Find link for PSConf.
