Small edits to Episode 1

--- a/episodes/2019/1.md
+++ b/episodes/2019/1.md
@@ -4,7 +4,9 @@
 
 ## Intro
 
-(Need to find a co-host)
+(Co-host? Self?)
+www.pure-pandemonium.club
+Podcast content topics
 
 ## Control-paste
 
@@ -24,7 +26,7 @@ https://github.com/sharkdp/insect
 
 Functor & NaturalTransformation?
 
-## Community Contribution Commemoration
+## Contribution Commemoration
 
 GitHub@JordanMartinez for his documentation contributions in [JordanMartinze/purescript-jordans-reference](https://github.com/JordanMartinez/purescript-jordans-reference)
 
@@ -59,4 +61,3 @@ TODO: Find a colleage to converse with.
 
 - [LambdaConf 2019](https://lambdaconf.zohobackstage.com/LambdaConf2019)
 - [ZuriHac 2019](https://mail.haskell.org/pipermail/haskell/2018-December/025594.html)
-- [PureScript Conf 2019]() TODO: Find link for PSConf.
